Add section 1 to landing page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <img src="" alt="Logo">
+        <div class="header_links">
+            <a href="">head link one</a>
+            <a href="">head link two</a>
+            <a href="">header link three</a>
+        </div>
+    </div>
+
+    <div class="content">
+        <div class="section1">
+            <h1>This website is awesome</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum natus nulla vero earum commodi. Libero, natus nam corporis quia, alias expedita sit sapiente repellendus ullam mollitia architecto numquam! Deleniti, non?</p>
+            <button>Sign Up</button>
+            <img src="" alt="">
+        </div>
+    </div>
+
 </body>
 </html>
