Add source for logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="" alt="Logo">
+        <img src="./Images/twisted-torus.png" alt="Logo">
         <div class="header_links">
             <a href="">head link one</a>
             <a href="">head link two</a>
@@ -19,9 +19,11 @@
 
     <div class="content">
         <div class="section1">
-            <h1>This website is awesome</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum natus nulla vero earum commodi. Libero, natus nam corporis quia, alias expedita sit sapiente repellendus ullam mollitia architecto numquam! Deleniti, non?</p>
-            <button>Sign Up</button>
+            <div class="s1-container">
+                <h1>This website is awesome</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum natus nulla vero earum commodi. Libero, natus nam corporis quia, alias expedita sit sapiente repellendus ullam mollitia architecto numquam! Deleniti, non?</p>
+                <button>Sign Up</button>
+            </div>
             <img src="" alt="">
         </div>
     </div>
