--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="header">
+    <nav class="header">
         <img src="./Images/twisted-torus.png" alt="Logo">
         <div class="header_links">
             <a href="">head link one</a>
             <a href="">head link two</a>
             <a href="">header link three</a>
         </div>
-    </div>
+    </nav>
 
     <div class="content">
         <div class="section1">
