Replace generic div with main

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </nav>
 
-    <div class="content">
+    <main class="content">
         <div class="section1">
             <div class="s1-container">
                 <h1>This website is awesome</h1>
@@ -26,7 +26,7 @@
             </div>
             <img src="" alt="">
         </div>
-    </div>
+    </main>
 
 </body>
 </html>
