Replace generic div with section

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     </nav>
 
     <main class="content">
-        <div class="section1">
+        <section class="section1">
             <div class="s1-container">
                 <h1>This website is awesome</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum natus nulla vero earum commodi. Libero, natus nam corporis quia, alias expedita sit sapiente repellendus ullam mollitia architecto numquam! Deleniti, non?</p>
                 <button>Sign Up</button>
             </div>
             <img src="" alt="">
-        </div>
+        </section>
     </main>
 
 </body>
