Add general elements for card section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@
             </div>
             <img src="" alt="">
         </section>
+
+        <section class="section2">
+            <h2>Some random information.</h2>
+            <div class="card-section">
+                <div class="card">
+                    <img src="" alt="" class="card-image">
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, laborum? Harum officiis, tempora molestias maxime, ad impedit voluptates voluptate deserunt, placeat ut corrupti explicabo veritatis?
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="" alt="" class="card-image">
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, laborum? Harum officiis, tempora molestias maxime, ad impedit voluptates voluptate deserunt, placeat ut corrupti explicabo veritatis?
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="" alt="" class="card-image">
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, laborum? Harum officiis, tempora molestias maxime, ad impedit voluptates voluptate deserunt, placeat ut corrupti explicabo veritatis?
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="" alt="" class="card-image">
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, laborum? Harum officiis, tempora molestias maxime, ad impedit voluptates voluptate deserunt, placeat ut corrupti explicabo veritatis?
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
