Shorten placeholders for card section

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
             <div class="card-section">
                 <div class="card">
                     <img src="" alt="" class="card-image">
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, laborum? Harum officiis, tempora molestias maxime, ad impedit voluptates voluptate deserunt, placeat ut corrupti explicabo veritatis?
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ab, voluptatem quam odio ea quibusdam.
                     </p>
                 </div>
                 <div class="card">
                     <img src="" alt="" class="card-image">
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, laborum? Harum officiis, tempora molestias maxime, ad impedit voluptates voluptate deserunt, placeat ut corrupti explicabo veritatis?
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum itaque porro necessitatibus perspiciatis at voluptatem.
                     </p>
                 </div>
                 <div class="card">
                     <img src="" alt="" class="card-image">
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, laborum? Harum officiis, tempora molestias maxime, ad impedit voluptates voluptate deserunt, placeat ut corrupti explicabo veritatis?
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. In adipisci sed repudiandae, vero cum cupiditate!
                     </p>
                 </div>
                 <div class="card">
                     <img src="" alt="" class="card-image">
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, laborum? Harum officiis, tempora molestias maxime, ad impedit voluptates voluptate deserunt, placeat ut corrupti explicabo veritatis?
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore voluptatum, reiciendis soluta accusamus perspiciatis magni.
                     </p>
                 </div>
             </div>
