--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                 </div>
             </div>
         </section>
+
+        <section class="section3">
+            <div class="sec3-container">
+                <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptatum rem aut. Perferendis at, a eum fugit nulla pariatur numquam, doloribus dolore quae assumenda non?</blockquote>
+                <cite>Thor, God of Thunder</cite>
+            </div>
+        </section>
+
     </main>
 
 </body>
