--- a/index.html
+++ b/index.html
@@ -32,31 +32,37 @@
             <div class="card-section">
                 <div class="card">
                     <img src="" alt="" class="card-image">
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ab, voluptatem quam odio ea quibusdam.
-                    </p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, sed.</p>
                 </div>
                 <div class="card">
                     <img src="" alt="" class="card-image">
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum itaque porro necessitatibus perspiciatis at voluptatem.
-                    </p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, eaque!</p>
                 </div>
                 <div class="card">
                     <img src="" alt="" class="card-image">
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. In adipisci sed repudiandae, vero cum cupiditate!
-                    </p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, iste.</p>
                 </div>
                 <div class="card">
                     <img src="" alt="" class="card-image">
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore voluptatum, reiciendis soluta accusamus perspiciatis magni.
-                    </p>
+                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, error?</p>
                 </div>
             </div>
         </section>
 
         <section class="section3">
-            <div class="sec3-container">
+            <div class="s3-container">
                 <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptatum rem aut. Perferendis at, a eum fugit nulla pariatur numquam, doloribus dolore quae assumenda non?</blockquote>
-                <cite>Thor, God of Thunder</cite>
+                <cite>-Thor, God of Thunder</cite>
+            </div>
+        </section>
+
+        <section class="section4">
+            <div class="s4-contatiner">
+                <div>
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="s4-button">Sign up</button>
             </div>
         </section>
 
