Fix class naming typo

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
 
         <section class="section4">
-            <div class="s4-contatiner">
+            <div class="s4-container">
                 <div>
                     <h3>Call to action! It's time!</h3>
                     <p>Sign up for our product by clicking that button right over there!</p>
