--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="section1">
             <div class="s1-container">
                 <h1>This website is awesome</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum natus nulla vero earum commodi. Libero, natus nam corporis quia, alias expedita sit sapiente repellendus ullam mollitia architecto numquam! Deleniti, non?</p>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                 <button>Sign Up</button>
             </div>
             <img src="" alt="">
