--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <section class="section3">
             <div class="s3-container">
-                <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptatum rem aut. Perferendis at, a eum fugit nulla pariatur numquam, doloribus dolore quae assumenda non?</blockquote>
+                <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
                 <cite>-Thor, God of Thunder</cite>
             </div>
         </section>
