Add images to section 1 and card section

--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                 <button>Sign Up</button>
             </div>
-            <img src="" alt="">
+            <img src="./Images/tim-goedhart-vnpTRdmtQ30-unsplash.jpg" alt="Photo by Tim Goedhart on Unsplash">
         </section>
 
         <section class="section2">
             <h2>Some random information.</h2>
             <div class="card-section">
                 <div class="card">
-                    <img src="" alt="" class="card-image">
+                    <img src="./Images/maryna-yazbeck-f7sVtG_cMdk-unsplash.jpg" alt="Maryna Yasbeck on Unsplash" class="card-image">
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, sed.</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="" class="card-image">
+                    <img src="./Images/mathilde-langevin-VbAlUREvH8Q-unsplash.jpg" alt="Mathilde Langevin on Unsplash" class="card-image">
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, eaque!</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="" class="card-image">
+                    <img src="./Images/andrea-de-santis-YElG04lSJcM-unsplash.jpg" alt="Andrea De Santis on Unsplash" class="card-image">
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, iste.</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="" class="card-image">
+                    <img src="./Images/jon-tyson-OZz8TK8T8MM-unsplash.jpg" alt="Jon Tyson on Unsplash" class="card-image">
                     <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, error?</p>
                 </div>
             </div>
