--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="header">
-        <img src="./Images/twisted-torus.png" alt="Logo">
+        <img src="./Images/wireframe-sphere (1).png" alt="Logo">
         <div class="header_links">
             <a href="">head link one</a>
             <a href="">head link two</a>
