Add and style footer

--- a/index.html
+++ b/index.html
@@ -68,5 +68,9 @@
 
     </main>
 
+    <footer class="footer">
+        <div>Copyright Don't Worry About It</div>
+    </footer>
+
 </body>
 </html>
