Adjust logo and button elements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <nav class="header">
-        <img src="./Images/wireframe-sphere (1).png" alt="Logo">
+        <!--<img src="./Images/wireframe-sphere (1).png" alt="Logo">-->
+        <button data-text="Awesome" class="button">
+            <span class="actual-text">&nbsp;JRivs&nbsp;</span>
+            <span class="hover-text" aria-hidden="true">&nbsp;JRivs&nbsp;</span>
+        </button>
         <div class="header_links">
             <a href="">head link one</a>
             <a href="">head link two</a>
