Add class to to buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="s1-container">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button>Sign Up</button>
+                <button class="sign-up">Sign Up</button>
             </div>
             <img src="./Images/tim-goedhart-vnpTRdmtQ30-unsplash.jpg" alt="Photo by Tim Goedhart on Unsplash">
         </section>
@@ -66,7 +66,7 @@
                     <h3>Call to action! It's time!</h3>
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <button class="s4-button">Sign up</button>
+                <button class="sign-up">Sign up</button>
             </div>
         </section>
 
